# riptide_msgs

./: CMakeLists.txt  package.xml
action/: Depth.action  FullDepth.action  Immerse.action
msg/: Actuators.msg  Constraint.msg  ControlSurfaceState.msg  DepthControllerState.msg  DispatcherState.msg  DolphinControllerState.msg  FramedVector.msg  ImmersionControllerState.msg  LogControllerState.msg  Multiplexer.msg  Pressure.msg  RiptideControllerState.msg
srv/: Constraint.srv  ConstraintArray.srv
